edgeone-cloud-monitoring/influxdb-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb-nodeport
  namespace: monitoring
spec:
  type: NodePort 
  ports:
  - port: 8086
    targetPort: 8086
    name: influxdb
  selector:
    app: influxdb
