edgeone-cloud-monitoring/influxdb-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: influxdb-edgeone-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: influxdb.edgeone.cloud
    http:
      paths:
        - path: /
          backend:
            serviceName: influxdb-nodeport
            servicePort: 8086
